@@ -33,11 +33,11 @@ Example configurations:
 The `syslog` input supports protocol specific configuration options plus the
 <<{beatname_lc}-input-{type}-common-options>> described later.
 
-Protocol `udp`:
+===== Protocol `udp`:
 
 include::../inputs/input-common-udp-options.asciidoc[]
 
-Protocol `tcp`:
+===== Protocol `tcp`:
 
 include::../inputs/input-common-tcp-options.asciidoc[]
 
