@@ -48,25 +48,24 @@ type Server struct {
 // New creates a new tcp server
 func New(
 	config *Config,
+	splitFunc bufio.SplitFunc,
 	callback inputsource.NetworkFunc,
 ) (*Server, error) {
-
-	if len(config.LineDelimiter) == 0 {
-		return nil, fmt.Errorf("empty line delimiter")
-	}
-
 	tlsConfig, err := tlscommon.LoadTLSServerConfig(config.TLS)
 	if err != nil {
 		return nil, err
 	}
 
-	sf := splitFunc([]byte(config.LineDelimiter))
+	if splitFunc == nil {
+		return nil, fmt.Errorf("SplitFunc can't be empty")
+	}
+
 	return &Server{
 		config:    config,
 		callback:  callback,
 		clients:   make(map[*client]struct{}, 0),
 		done:      make(chan struct{}),
-		splitFunc: sf,
+		splitFunc: splitFunc,
 		log:       logp.NewLogger("tcp").With("address", config.Host),
 		tlsConfig: tlsConfig,
 	}, nil
@@ -190,7 +189,8 @@ func (s *Server) clientsCount() int {
 	return len(s.clients)
 }
 
-func splitFunc(lineDelimiter []byte) bufio.SplitFunc {
+// SplitFunc allows to create a `bufio.SplitFunc` based on a delimiter provided.
+func SplitFunc(lineDelimiter []byte) bufio.SplitFunc {
 	ld := []byte(lineDelimiter)
 	if bytes.Equal(ld, []byte("\n")) {
 		// This will work for most usecases and will also strip \r if present.
