@@ -56,6 +56,7 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
 
 *Filebeat*
 
+- Make inputsource generic taking bufio.SplitFunc as input {pull}7746[7746]
 - Add custom unpack to log hints config to avoid env resolution {pull}7710[7710]
 
 *Heartbeat*
